--- a/src/style/youtube-layout.scss
+++ b/src/style/youtube-layout.scss
@@ -306,7 +306,7 @@
 
   justify-content: center;
 
-  padding-right: calc(46px + 8px);
+  //padding-right: calc(46px + 8px);
 
   input {
     flex-grow: 1;
