--- a/src/style/customComp/_TangoComp.scss
+++ b/src/style/customComp/_TangoComp.scss
@@ -106,6 +106,10 @@
     }
   }
 
+  .button-container, .button-container_flexEnd {
+    padding: 0 8px;
+  }
+
   //모듈화 예정.
   .editButtonContainer{
     display: flex;
